--- a/index.html
+++ b/index.html
@@ -10,21 +10,39 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     </head>
     <body>
-        <header>
-            <div class="banner">
-                <div class="banner-left">
-                    <h1>It's good
+        <main class="max-w-screen-xl  mx-auto px-20 lg:px-28">
+            <header class="flex pt-10 mb-20">
+                <!-- text content -->
+                <div>
+                    <h1 class="text-5xl md:text-7xl">It's good
                         tea time at The Tea House</h1>
+                    <p class="text-gray-500">Tea and Botanical Solutions
+                        Supplier
+                        Give Optimum
+                        Satisfaction To Your Taste Buds.</p>
+                    <button
+                        class="bg-gradient-to-r from-purple-500 to-pink-500 px-5 py-3 rounded-lg">
+                        Explore
+                        more <i class="fa-solid fa-arrow-right"></i></button>
                 </div>
-                <p>Tea and Botanical Solutions Supplier Give Optimum
-                    Satisfaction To Your Taste Buds.</p>
-                <button>Explore More</button>
-            </div>
-            <div class="banner">
-                <div class="banner-right">
+                <!--img content -->
+                <div class="relative">
+                    <div>
+                        <img src="./images/banner.png" class="w-full" alt>
+                    </div>
+                    <div
+                        class="flex items-center g-white shadow-lg  absolute bottom-10 md:bottom-400-200 md:left-20 px-2 lg:py-4 rounded-lg ml-2">
+                        <div>
+                            <i class="fa-solid fa-star text-2xl rotate-45"></i>
+                        </div>
+                        <div>
+                            <h2 class=" font-bold">5.00</h2>
+                            <p>Trust Pilot Ratings</p>
+                        </div>
+                    </div>
+                </div>
 
-                </div>
-            </div>
-        </header>
+            </header>
+        </main>
+
     </body>
-</html>
