--- a/index.html
+++ b/index.html
@@ -7,42 +7,141 @@
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    </head>
-    <body>
-        <main class="max-w-screen-xl  mx-auto px-20 lg:px-28">
-            <header class="flex pt-10 mb-20">
-                <!-- text content -->
-                <div>
-                    <h1 class="text-5xl md:text-7xl">It's good
-                        tea time at The Tea House</h1>
-                    <p class="text-gray-500">Tea and Botanical Solutions
-                        Supplier
-                        Give Optimum
-                        Satisfaction To Your Taste Buds.</p>
-                    <button
-                        class="bg-gradient-to-r from-purple-500 to-pink-500 px-5 py-3 rounded-lg">
-                        Explore
-                        more <i class="fa-solid fa-arrow-right"></i></button>
-                </div>
-                <!--img content -->
-                <div class="relative">
+            </head>
+        <body>
+            <main class="max-w-screen-xl  mx-auto px-20 lg:px-28">
+                <header class="flex pt-10 mb-20">
+                    <!-- text content -->
                     <div>
-                        <img src="./images/banner.png" class="w-full" alt>
+                        <h1 class="text-5xl md:text-7xl">It's good
+                            tea time at The Tea House</h1>
+                        <p class="text-gray-500">Tea and Botanical Solutions
+                            Supplier
+                            Give Optimum
+                            Satisfaction To Your Taste Buds.</p>
+                        <button
+                            class="bg-gradient-to-r from-purple-500 to-pink-500 px-5 py-3 rounded-lg">
+                            Explore
+                            more <i
+                                class="fa-solid fa-arrow-right"></i></button>
                     </div>
-                    <div
-                        class="flex items-center g-white shadow-lg  absolute bottom-10 md:bottom-400-200 md:left-20 px-2 lg:py-4 rounded-lg ml-2">
+                    <!--img content -->
+                    <div class="relative">
                         <div>
-                            <i class="fa-solid fa-star text-2xl rotate-45"></i>
+                            <img src="./images/banner.png" class="w-full" alt>
                         </div>
-                        <div>
-                            <h2 class=" font-bold">5.00</h2>
-                            <p>Trust Pilot Ratings</p>
+                        <div
+                            class="flex items-center bg-white shadow-lg  absolute bottom-10 md:bottom-400-200 md:left-20 px-2 lg:py-4 rounded-lg ml-2">
+                            <div class="px-2">
+                                <i
+                                    class="fa-solid fa-star text-amber-300  text-4xl rotate-45"
+                                    class="px-2"></i>
+                            </div>
+                            <div>
+                                <h2 class=" font-bold">5.00</h2>
+                                <p>Trust Pilot Ratings</p>
+                            </div>
                         </div>
+                    </div>
+
+                </header>
+                <section class="py-8 lg-24">
+                    <div class="text-center">
+                        <h1 class="text-5xl pb-3">Our Featured Products</h1>
+                        <p class="max-w-xl mx-auto">Our Featured
+                            Products</h1>There are many variations
+                        of
+                        passages
+                        of Lorem Ipsum available, but the majority have suffered
+                        alteration
+                        in some form, by injected humour, or randomised words
+                        which
+                        don't
+                        look even slightly believable.</p>
+                </div>
+
+            </section>
+            <!-- feature prroduct -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
+                <!-- product card -->
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img class="mx-auto pt-4 pb-1" src="./images/tea-1.png" alt>
+                    <div class="p-4 text-center">
+                        <h1 class="font-bold text-xl">Milk Tea</h1>
+                        <p class="font-semibold">Creamer could be replaced by
+                            fresh milk</p>
+                    </div>
+                </div>
+                <!-- product card -->
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img class="mx-auto pt-4 pb-1" src="./images/tea-4.png" alt>
+                    <div class="p-4 text-center">
+                        <h1 class="font-bold text-xl">Milk Tea</h1>
+                        <p class="font-semibold">Creamer could be replaced by
+                            fresh milk</p>
+                    </div>
+                </div>
+                <!-- product card -->
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img class="mx-auto pt-4 pb-1" src="./images/tea-2.png" alt>
+                    <div class="p-4 text-center">
+                        <h1 class="font-bold text-xl">Black Tea</h1>
+                        <p class="font-semibold">Creamer could be replaced by
+                            fresh milk</p>
+                    </div>
+                </div> <!-- product card -->
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img class="mx-auto pt-4 pb-1" src="./images/tea-3.png" alt>
+                    <div class="p-4 text-center">
+                        <h1 class="font-bold text-xl">Green Tea</h1>
+                        <p class="font-semibold">Creamer could be replaced by
+                            fresh milk</p>
+                    </div>
+                </div>
+            </div>
+            <section class="mb-24 mt-20">
+                < <div div class="grid grid-cols-1 lg:grid-cols-2">
+                    <!-- image section -->
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
+                        <div class="grid-cols-2 grid-rows-3 gap-4 lg:w-5/4">
+                            <div
+                                class="h-32 row-span-2 bg-gradient-to-r from-red-100 to-red-50 rounded-xl ">
+                            </div>
+                            <div class="bg-orange-100 my-5">
+                                <img src="./images/fresh-1.png"
+                                    class="mx-auto" alt>
+                            </div>
+                        </div>
+                        <div class="bg-orange-100  lg:w-5/4 rounded">
+                            <img src="./images/fresh-1.png"
+                                class="mx-auto" alt>
+                        </div>
+                    </div>
+                    <!-- text sextio n -->
+                    <div>
+                        <h1 class="text-5xl font-bold mb-3">Great Tea, Freshly
+                            Presented</h1>
+                        <p>Great Tea, Freshly Presented The meaning of gong cha
+                            is chanese is to provide the best tea to emperor
+                            from
+                            all
+                            possessions . It represents the highest quality and
+                            self
+                            expectation. Establishing in 2006, Gong cha had been
+                            deeply
+                            appreciated by its custoers because of good words of
+                            mouth
+                            and unique customized service orginated from
+                            Taiwan.</p>
+                        <br>
+                        <h1 class="text-2xl">Unique Taste</h1>
+                        <p>A Unique and different style from other teapots gives
+                            a
+                            luxurious and minimalist impression</p>
                     </div>
                 </div>
 
-            </header>
+            </section>
         </main>
 
     </body>
